--- a/source_code/npx/package.json
+++ b/source_code/npx/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
+    "dropbox": "^10.34.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
@@ -23,6 +24,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.4",
     "nodemon": "^2.0.22",
     "upload": "^1.3.1"
